--- a/notebooks/99-Playground.ipynb
+++ b/notebooks/99-Playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,12 @@
     "sns.set_style(\"white\")\n",
     "%config InlineBackend.figure_format = \"retina\"\n",
     "\n",
-    "jobs = cleaning.prep(pd.read_pickle(\"../data/jobs.pkl\"))"
+    "jobs = cleaning.prep(pd.read_pickle(\"../data/jobs.pkl\"), filtered=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,6 +155,22 @@
        "      <th>15507</th>\n",
        "      <td>Teamleiter (m/w/d) Data Science - AI-Based Ident</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16756</th>\n",
+       "      <td>Data Scientist - AI/ML (m/f/d)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16890</th>\n",
+       "      <td>Data Scientist – Data Engineering und MLOPS (m...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16901</th>\n",
+       "      <td>Teamleiter Data Analytics (w/m/d)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16934</th>\n",
+       "      <td>Teamleiter Business Analytics und Data Science...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -185,10 +201,14 @@
        "9240           Teamleiter*in IT Data-Analytics & Trading\n",
        "9338   Teamleiter Business Intelligence / Data Analys...\n",
        "13545  Teamleiter Business Analytics und Data Science...\n",
-       "15507   Teamleiter (m/w/d) Data Science - AI-Based Ident"
+       "15507   Teamleiter (m/w/d) Data Science - AI-Based Ident\n",
+       "16756                     Data Scientist - AI/ML (m/f/d)\n",
+       "16890  Data Scientist – Data Engineering und MLOPS (m...\n",
+       "16901                  Teamleiter Data Analytics (w/m/d)\n",
+       "16934  Teamleiter Business Analytics und Data Science..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
