Refactor and cleanup

--- a/notebooks/04-Relevant_jobs.ipynb
+++ b/notebooks/04-Relevant_jobs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,6 +277,257 @@
     "    | jobs[\"Profile\"].str.lower().str.contains(\"ethi\"),\n",
     "    :,\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Titel</th>\n",
+       "      <th>Unternehmen</th>\n",
+       "      <th>Ort</th>\n",
+       "      <th>Gehalt_min</th>\n",
+       "      <th>Gehalt_max</th>\n",
+       "      <th>JobID</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Datum</th>\n",
+       "      <th>Teilzeit_Remote</th>\n",
+       "      <th>Introduction</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Contact</th>\n",
+       "      <th>Vollzeit</th>\n",
+       "      <th>Teilzeit</th>\n",
+       "      <th>Zeit flexibel</th>\n",
+       "      <th>Remote</th>\n",
+       "      <th>Job Kategorie</th>\n",
+       "      <th>Junior</th>\n",
+       "      <th>Gehalt_min_yearly</th>\n",
+       "      <th>Gehalt_max_yearly</th>\n",
+       "      <th>Gehalt_durchschnitt_yearly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>Research Scientist in Data and AI Model Auditi...</td>\n",
+       "      <td>Bosch Gruppe</td>\n",
+       "      <td>Renningen</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>57651346</td>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--rese...</td>\n",
+       "      <td>2023-09-04</td>\n",
+       "      <td>Vollzeit, Home Office möglich</td>\n",
+       "      <td>Do you want beneficial technologies being shap...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>www.bosch.com/research\\nhttps://www.bosch-ai.c...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>False</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>75000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>692</th>\n",
+       "      <td>Senior Data Analyst | Product | Advertising Se...</td>\n",
+       "      <td>Otto (GmbH &amp; Co KG)</td>\n",
+       "      <td>Hamburg</td>\n",
+       "      <td>4758</td>\n",
+       "      <td>6855</td>\n",
+       "      <td>57528522</td>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--seni...</td>\n",
+       "      <td>2023-09-04</td>\n",
+       "      <td>Vollzeit, Home Office möglich</td>\n",
+       "      <td>Advertising ist eine der drei strategischen Sä...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Svenja Kreutzfeldt  Junior HR Managerin  +49 4...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>False</td>\n",
+       "      <td>57096</td>\n",
+       "      <td>82260</td>\n",
+       "      <td>69678.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9077</th>\n",
+       "      <td>Demand Analyst (m/w/d)</td>\n",
+       "      <td>Groupe SEB Deutschland GmbH</td>\n",
+       "      <td>Geislingen an der Steige</td>\n",
+       "      <td>4113</td>\n",
+       "      <td>6129</td>\n",
+       "      <td>57938604</td>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--dema...</td>\n",
+       "      <td>2023-10-29</td>\n",
+       "      <td>Vollzeit</td>\n",
+       "      <td>Die Groupe SEB ist weltweit mit mehr als 33.00...</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>False</td>\n",
+       "      <td>49356</td>\n",
+       "      <td>73548</td>\n",
+       "      <td>61452.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9089</th>\n",
+       "      <td>Business Analyst Intern - Luxembourg</td>\n",
+       "      <td>Amazon Europe Core</td>\n",
+       "      <td>Luxembourg</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>57820443</td>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--busi...</td>\n",
+       "      <td>2023-10-29</td>\n",
+       "      <td>Vollzeit</td>\n",
+       "      <td>An Amazon internship will provide you with an ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>False</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15336</th>\n",
+       "      <td>Business Analyst Intern</td>\n",
+       "      <td>Amazon Europe Core</td>\n",
+       "      <td>Luxembourg</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>58192947</td>\n",
+       "      <td>https://www.stepstone.de/stellenangebote--busi...</td>\n",
+       "      <td>2023-12-06</td>\n",
+       "      <td>Vollzeit</td>\n",
+       "      <td>An Amazon internship will provide you with an ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>False</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   Titel  \\\n",
+       "79     Research Scientist in Data and AI Model Auditi...   \n",
+       "692    Senior Data Analyst | Product | Advertising Se...   \n",
+       "9077                              Demand Analyst (m/w/d)   \n",
+       "9089                Business Analyst Intern - Luxembourg   \n",
+       "15336                            Business Analyst Intern   \n",
+       "\n",
+       "                       Unternehmen                       Ort  Gehalt_min  \\\n",
+       "79                    Bosch Gruppe                 Renningen        5000   \n",
+       "692            Otto (GmbH & Co KG)                   Hamburg        4758   \n",
+       "9077   Groupe SEB Deutschland GmbH  Geislingen an der Steige        4113   \n",
+       "9089            Amazon Europe Core                Luxembourg        <NA>   \n",
+       "15336           Amazon Europe Core                Luxembourg        <NA>   \n",
+       "\n",
+       "       Gehalt_max     JobID  \\\n",
+       "79           7500  57651346   \n",
+       "692          6855  57528522   \n",
+       "9077         6129  57938604   \n",
+       "9089         <NA>  57820443   \n",
+       "15336        <NA>  58192947   \n",
+       "\n",
+       "                                                    Link      Datum  \\\n",
+       "79     https://www.stepstone.de/stellenangebote--rese... 2023-09-04   \n",
+       "692    https://www.stepstone.de/stellenangebote--seni... 2023-09-04   \n",
+       "9077   https://www.stepstone.de/stellenangebote--dema... 2023-10-29   \n",
+       "9089   https://www.stepstone.de/stellenangebote--busi... 2023-10-29   \n",
+       "15336  https://www.stepstone.de/stellenangebote--busi... 2023-12-06   \n",
+       "\n",
+       "                     Teilzeit_Remote  \\\n",
+       "79     Vollzeit, Home Office möglich   \n",
+       "692    Vollzeit, Home Office möglich   \n",
+       "9077                        Vollzeit   \n",
+       "9089                        Vollzeit   \n",
+       "15336                       Vollzeit   \n",
+       "\n",
+       "                                            Introduction  ...  \\\n",
+       "79     Do you want beneficial technologies being shap...  ...   \n",
+       "692    Advertising ist eine der drei strategischen Sä...  ...   \n",
+       "9077   Die Groupe SEB ist weltweit mit mehr als 33.00...  ...   \n",
+       "9089   An Amazon internship will provide you with an ...  ...   \n",
+       "15336  An Amazon internship will provide you with an ...  ...   \n",
+       "\n",
+       "                                                 Contact Vollzeit Teilzeit  \\\n",
+       "79     www.bosch.com/research\\nhttps://www.bosch-ai.c...     True    False   \n",
+       "692    Svenja Kreutzfeldt  Junior HR Managerin  +49 4...     True    False   \n",
+       "9077                                                         True    False   \n",
+       "9089                                                         True    False   \n",
+       "15336                                                        True    False   \n",
+       "\n",
+       "      Zeit flexibel  Remote   Job Kategorie  Junior  Gehalt_min_yearly  \\\n",
+       "79            False    True  Data Scientist   False              60000   \n",
+       "692           False    True    Data Analyst   False              57096   \n",
+       "9077          False   False    Data Analyst   False              49356   \n",
+       "9089          False   False    Data Analyst   False               <NA>   \n",
+       "15336         False   False    Data Analyst   False               <NA>   \n",
+       "\n",
+       "      Gehalt_max_yearly  Gehalt_durchschnitt_yearly  \n",
+       "79                90000                     75000.0  \n",
+       "692               82260                     69678.0  \n",
+       "9077              73548                     61452.0  \n",
+       "9089               <NA>                        <NA>  \n",
+       "15336              <NA>                        <NA>  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobs[jobs[\"Description\"].str.lower().str.contains(\"bias\")]"
    ]
   },
   {
@@ -539,6 +790,27 @@
    "source": [
     "junior_data_science_berlin = junior_data_science_all.loc[junior_data_science_all[\"Ort\"] == \"Berlin\", :]\n",
     "junior_data_science_berlin.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4    https://www.stepstone.de/stellenangebote--juni...\n",
+       "Name: Link, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobs.loc[jobs[\"JobID\"] == 57181289, \"Link\"]"
    ]
   },
   {
