--- a/notebooks/99-Playground.ipynb
+++ b/notebooks/99-Playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,15 +251,12 @@
     "import os\n",
     "import sys\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import re\n",
     "\n",
     "script_dir = os.path.abspath(\"\")\n",
     "mymodule_dir = os.path.join(script_dir, \"..\", \"scripts\")\n",
     "sys.path.append(mymodule_dir)\n",
     "import cleaning\n",
-    "import nlp\n",
     "\n",
     "pd.set_option(\"mode.copy_on_write\", True)\n",
     "sns.set_theme()\n",
@@ -272,208 +269,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_other_jobs = jobs.loc[jobs[\"Job Kategorie\"] == \"Andere\", :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "other_data_jobs = cleaning.filter(jobs).loc[lambda df: df[\"Job Kategorie\"] == \"Andere\", :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5045, 23)"
+       "Unternehmen\n",
+       "BMW Group                                     77\n",
+       "CHECK24                                       72\n",
+       "ZEISS                                         59\n",
+       "Amazon Europe Core                            51\n",
+       "ProSiebenSat.1 Careers                        31\n",
+       "ARRK Engineering GmbH                         26\n",
+       "IDS GmbH - Analysis and Reporting Services    23\n",
+       "TÜV SÜD                                       21\n",
+       "TERRITORY GmbH                                21\n",
+       "FUTRUE GmbH                                   21\n",
+       "Stadtwerke München GmbH                       20\n",
+       "Daiichi Sankyo Europe GmbH                    19\n",
+       "Bertrandt AG                                  18\n",
+       "Reply                                         15\n",
+       "Arthrex GmbH                                  15\n",
+       "ADAC                                          15\n",
+       "Hoffmann Group                                12\n",
+       "HypoVereinsbank – Member of UniCredit         12\n",
+       "Rohde & Schwarz GmbH & Co. KG                 11\n",
+       "MEAG MUNICH ERGO AssetManagement GmbH         11\n",
+       "Name: Titel, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged = all_other_jobs.merge(other_data_jobs, on=\"JobID\", indicator=True, how=\"left\")\n",
-    "non_data_jobs = all_other_jobs.loc[all_other_jobs[\"JobID\"].isin(merged.loc[merged[\"_merge\"] == \"left_only\", \"JobID\"])]\n",
-    "non_data_jobs.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "irrelevant_keywords = \"senior|software|projektleiter|developerdeveloper|administrator|projektentwickler|accountant|hr|sap|disponent|sous|recruit|controll|courier|vertrieb|driv|personalreferent|einkäufer|softwareentwickl\"\n",
-    "interesting_jobs = non_data_jobs[~non_data_jobs[\"Titel\"].str.contains(irrelevant_keywords, flags=re.IGNORECASE, regex=True)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lemmas = [nlp.tokenize_doc(title) for title in interesting_jobs[\"Titel\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('junior', 1453),\n",
-       " ('special', 212),\n",
-       " ('developer', 126),\n",
-       " ('business', 92),\n",
-       " ('referent', 86),\n",
-       " ('bereich', 84),\n",
-       " ('experte', 77),\n",
-       " ('ingenieur', 76),\n",
-       " ('mitarbeiter', 76),\n",
-       " ('gender', 69)]"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from collections import Counter\n",
-    "\n",
-    "all_title_words = [w for doc in lemmas for w in doc]\n",
-    "bow = Counter(all_title_words)\n",
-    "bow.most_common(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_titles = [\" \".join(doc) for doc in lemmas]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Titel\n",
-       "junior talent acquisition special                                                    11\n",
-       "junior treasur                                                                        9\n",
-       "junior buyer                                                                          8\n",
-       "full stack developer                                                                  8\n",
-       "ausbildung fachinformatiker systemintegration                                         7\n",
-       "                                                                                     ..\n",
-       "phd ai ml based credibl simulation model power modul hybrid full electric car div     1\n",
-       "sachgebietsleitung finanz steuern tv unbefristet                                      1\n",
-       "crossmedia redakteur brigitte schwerpunkt femal finance                               1\n",
-       "manufacturing technician                                                              1\n",
-       "junior berater pr social media                                                        1\n",
-       "Name: count, Length: 2156, dtype: int64"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_all_titles = pd.DataFrame({\"Titel\": all_titles})\n",
-    "df_all_titles.loc[~df_all_titles[\"Titel\"].str.contains(irrelevant_keywords, regex=True), \"Titel\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Titel</th>\n",
-       "      <th>Unternehmen</th>\n",
-       "      <th>Ort</th>\n",
-       "      <th>Gehalt_min</th>\n",
-       "      <th>Gehalt_max</th>\n",
-       "      <th>JobID</th>\n",
-       "      <th>Link</th>\n",
-       "      <th>Datum</th>\n",
-       "      <th>Teilzeit_Remote</th>\n",
-       "      <th>Introduction</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Contact</th>\n",
-       "      <th>Vollzeit</th>\n",
-       "      <th>Teilzeit</th>\n",
-       "      <th>Zeit flexibel</th>\n",
-       "      <th>Remote</th>\n",
-       "      <th>Job Kategorie</th>\n",
-       "      <th>Junior</th>\n",
-       "      <th>Gehalt_min_yearly</th>\n",
-       "      <th>Gehalt_max_yearly</th>\n",
-       "      <th>Gehalt_durchschnitt_yearly</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>0 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Titel, Unternehmen, Ort, Gehalt_min, Gehalt_max, JobID, Link, Datum, Teilzeit_Remote, Introduction, Description, Profile, We_offer, Contact, Vollzeit, Teilzeit, Zeit flexibel, Remote, Job Kategorie, Junior, Gehalt_min_yearly, Gehalt_max_yearly, Gehalt_durchschnitt_yearly]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "interesting_jobs[interesting_jobs[\"Titel\"].str.contains(\"burda\", flags=re.IGNORECASE, regex=True)]"
+    "jobs.loc[jobs[\"Ort\"] == \"München\", :].groupby(\"Unternehmen\")[\"Titel\"].count().sort_values(ascending= False).head(20)"
    ]
   },
   {
