--- a/notebooks/04-Relevant_jobs.ipynb
+++ b/notebooks/04-Relevant_jobs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,43 +327,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Unternehmen\n",
-       "Stepstone GmbH                                61\n",
-       "ZEISS                                         44\n",
-       "Hannover Rück SE                              33\n",
-       "Amazon Europe Core                            32\n",
-       "Bosch Gruppe                                  31\n",
-       "HDI AG                                        22\n",
-       "BMW Group                                     19\n",
-       "R+V Allgemeine Versicherung AG                19\n",
-       "Schwarz Dienstleistungen                      17\n",
-       "ING Deutschland                               17\n",
-       "IDS GmbH - Analysis and Reporting Services    16\n",
-       "Uniper                                        15\n",
-       "Otto (GmbH & Co KG)                           14\n",
-       "Sparkassen Rating und Risikosysteme GmbH      14\n",
-       "Atruvia AG                                    13\n",
-       "REWE digital                                  12\n",
-       "TARGOBANK                                     12\n",
-       "BridgingIT GmbH                               12\n",
-       "Mercedes - Benz AG                            12\n",
-       "Uniper SE                                     12\n",
+       "NEW YORKER                4\n",
+       "KOSATEC Computer GmbH     2\n",
+       "AUEL EDV-Beratung GmbH    1\n",
+       "Ameno GmbH                1\n",
+       "ZEISS                     1\n",
        "Name: Titel, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jobs.groupby(\"Unternehmen\")[\"Titel\"].count().sort_values(ascending=False).head(20)"
+    "jobs[jobs[\"Ort\"] == \"Braunschweig\"].groupby(\"Unternehmen\")[\"Titel\"].count().sort_values(ascending=False).head(20)"
    ]
   },
   {
